@@ -1,17 +1,17 @@
 /* Copyright (c) 2007 Google Inc.
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*     http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
-*/
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
 //
 //  GDataQueryGoogleBase.m
@@ -24,9 +24,8 @@ static NSString *const kBQParamName = @"bq";
 
 @implementation GDataQueryGoogleBase
 
-
 + (GDataQueryGoogleBase *)googleBaseQueryWithFeedURL:(NSURL *)feedURL {
-  return [[[self alloc] initWithFeedURL:feedURL] autorelease];   
+  return [[[self alloc] initWithFeedURL:feedURL] autorelease];
 }
 
 - (NSString *)googleBaseQuery {
@@ -38,20 +37,15 @@ static NSString *const kBQParamName = @"bq";
   [self addCustomParameterWithName:kBQParamName value:str];
 }
 
-- (int)maxValues {
-  int maxVal = 0;
-  NSString *str =  [self valueForParameterWithName:kMaxValuesParamName];
-  if (str) {
-    NSScanner *scanner = [NSScanner scannerWithString:str];
-    [scanner scanInt:&maxVal];    
-  }
-  return maxVal;
+- (NSInteger)maxValues {
+  return [self intValueForParameterWithName:kMaxValuesParamName
+                      missingParameterValue:0];
 }
 
-- (void)setMaxValues:(int)val {
-  NSNumber *intNum = [NSNumber numberWithInt:val];
+- (void)setMaxValues:(NSInteger)val {
   [self addCustomParameterWithName:kMaxValuesParamName
-                             value:[intNum stringValue]];
+                          intValue:val
+                    removeForValue:0];
 }
 
 @end
